force-app/main/default/objects/EC_ProductIndexBatchStatus__c/EC_ProductIndexBatchStatus__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Product Index Batch Status</label>
</CustomObject>