force-app/main/default/objects/EC_ProductIndexBatchStatus__c/fields/EC_Add_Product_to_Master_Pricelist_Batch__c.field-meta.xml
<CustomField>
    <fullName>EC_Add_Product_to_Master_Pricelist_Batch__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>checkbox to enable/disable Pricelist Inactivation Batch</inlineHelpText>
    <label>Add Product to Master Pricelist Batch</label>
    <type>Checkbox</type>
</CustomField>