force-app/main/default/objects/EC_ProductIndexBatchStatus__c/fields/EC_Category_Batch_Schedule_Interval__c.field-meta.xml
<CustomField>
    <fullName>EC_Category_Batch_Schedule_Interval__c</fullName>
    <label>Category Batch Schedule Interval</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>