force-app/main/default/objects/EC_ProductIndexBatchStatus__c/fields/EC_InActive_AccountGroupPriceList_Batch__c.field-meta.xml
<CustomField>
    <fullName>EC_InActive_AccountGroupPriceList_Batch__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>checkbox to enable/disable PricelistItem Inactivation Batch</inlineHelpText>
    <label>InActive AccountGroupPriceList Batch</label>
    <type>Checkbox</type>
</CustomField>