force-app/main/default/objects/EC_ProductIndexBatchStatus__c/fields/EC_Inactive_Billing_Address_Flag__c.field-meta.xml
<CustomField>
    <fullName>EC_Inactive_Billing_Address_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive Billing Address Flag</label>
    <type>Checkbox</type>
</CustomField>