force-app/main/default/objects/EC_ProductIndexBatchStatus__c/fields/EC_InActive_ProductCategroy_Batch__c.field-meta.xml
<CustomField>
    <fullName>EC_InActive_ProductCategroy_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EC InActive ProductCategroy Batch</description>
    <inlineHelpText>EC InActive ProductCategroy Batch</inlineHelpText>
    <label>EC InActive ProductCategroy Batch</label>
    <type>Checkbox</type>
</CustomField>