force-app/main/default/objects/EC_ProductIndexBatchStatus__c/fields/EC_InActive_ProductMedia_Batch__c.field-meta.xml
<CustomField>
    <fullName>EC_InActive_ProductMedia_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>flag to enable/disable ProductMedia Inactivation Batch</inlineHelpText>
    <label>InActive ProductMedia Batch</label>
    <type>Checkbox</type>
</CustomField>