force-app/main/default/objects/EC_ProductIndexBatchStatus__c/fields/EC_Product_Index_Batch_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>EC_Product_Index_Batch_Last_Run__c</fullName>
    <label>Product Index Batch Last Run</label>
    <type>DateTime</type>
</CustomField>