force-app/main/default/objects/EC_ProductIndexBatchStatus__c/fields/EC_Product_Index_Interval__c.field-meta.xml
<CustomField>
    <fullName>EC_Product_Index_Interval__c</fullName>
    <label>Product Index Interval</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>