force-app/main/default/objects/EC_ProductIndexBatchStatus__c/fields/EC_Product_Index_Switch__c.field-meta.xml
<CustomField>
    <fullName>EC_Product_Index_Switch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Product Index Switch</label>
    <type>Checkbox</type>
</CustomField>