force-app/main/default/objects/EC_ProductIndexBatchStatus__c/fields/EC_Product_Sequence_Index__c.field-meta.xml
<CustomField>
    <fullName>EC_Product_Sequence_Index__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EC Product Sequence Index</description>
    <label>EC Product Sequence Index</label>
    <type>Checkbox</type>
</CustomField>