force-app/main/default/objects/EC_ProductIndexBatchStatus__c/fields/EC_ProductIndexLocale__c.field-meta.xml
<CustomField>
    <fullName>EC_ProductIndexLocale__c</fullName>
    <label>Product Index Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>