force-app/main/default/objects/EC_ProductIndexBatchStatus__c/fields/Index_Batch_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Index_Batch_Start_Time__c</fullName>
    <label>Index Batch Start Time</label>
    <type>DateTime</type>
</CustomField>